# RGBD-Vision

./: README.md  README.md~
Methods/: README.md
Methods/kinect_point_cloud/: CMakeCache.txt  Makefile  cmake_install.cmake  readme.txt
Methods/kinect_point_cloud/exe/: point_cloud_capture  savepng
Methods/kinect_point_cloud/src/: clustering.cpp  main.cpp  point_cloud_capture.cpp
Methods/mutisense_pointcloud/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  readme.txt
Methods/mutisense_pointcloud/devel/: .rosinstall  setup.sh
Methods/mutisense_pointcloud/gtest/: CTestTestfile.cmake  Makefile
Methods/rgbdslam/: README.md
ROS-Packages/: README.md  README.md~
ROS-Packages/PCDrealtime/: README.md
ROS-Packages/PCDrealtime/my_pcl_tutorial/: CMakeLists.txt  package.xml
ROS-Packages/PCDrealtime/my_pcl_tutorial/src/: pcl_segment.cpp
ROS-Packages/lsd_slam/: README.md
ROS-Packages/lsd_slam/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ROS-Packages/lsd_slam/catkin_ws/install/: setup.sh
ROS-Packages/lsd_slam/rosbuild_ws/: .qglviewer.xml  setup.sh
ROS-Packages/lsd_slam/rosbuild_ws/package_dir/: .qglviewer.xml
ROS-Packages/rgbdslam/: README.md
ROS-Packages/rgbdslam/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
kinect_point_cloud/: CMakeCache.txt  CMakeLists.txt  Makefile  clustering  cmake_install.cmake  openniViewer  point_cloud_capture  readme.txt  readme.txt~  savepng
kinect_point_cloud/data/: clustering.pcd
kinect_point_cloud/exe/: clustering  main
kinect_point_cloud/src/: main.cpp  savepng.cpp
mutisense_pointcloud/: example
mutisense_pointcloud/catkin_generated/: generate_cached_setup.py  setup_cached.sh
mutisense_pointcloud/catkin_generated/stamps/multisense_point_cloud/: _setup_util.py.stamp
mutisense_pointcloud/devel/: .catkin
mutisense_pointcloud/src/: example.cpp
(+18 files in other folders)
